Fixed second block

--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -2067,7 +2067,7 @@
     #object {
         position: relative;
         bottom: 9px;
-    }octoWrap
+    }
 
     .headerB ul li {
         font-size: 15px;
@@ -2435,6 +2435,10 @@
         /*position: relative;*/
         /*top: 105px;*/
     /*}*/
+}
+@media only screen and(max-width:1199px ) {
+    .line{
+        display: none!important;    }
 }
 
 @media only screen and (max-width: 1440px) and (max-width: 1920px)  {
