--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -33,88 +33,111 @@
         </section>
     </nav>
     <main>
-
-
         <section class="OneSec">
-
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 LineP">
-                        <h2>Типажи сайтов которые мы делаем</h2>
-                        <p><small>А какой сайт нужен вам?</small></p>
+                    <div class="col-lg-12 col-md-12">
+                        <h2 id="siteType">Типажи сайтов которые мы делаем</h2>
+                        <p id="subSiteType"><small>А какой сайт нужен вам?</small></p>
                     </div>
                 </div>
-
-                <article class="infBlock">
-
-                    <div class="algN">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 artO">
-                                <h3>
-                                    Лендинг страница
-
-                                </h3>
-                                <p>одностраничный сайт отличается повышенной конверсией, меньшей информативностью по сравнению с другими сайтами.</p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 artO">
-                                <h3>
-                                    Сайт каталог
-                                </h3>
-                                <p>идеальный тип сайта для отображения товаров или услуг методом каталога
-                                </p>
-                            </div>
+                    <img id="line" src="/img/EllipseOne.png" alt="Line">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="headerWrapperL">
+                            <h3>Лендинг страница <img id="iconHL" src="/img/icon.png" alt="icon"></h3>
+                            <p>- одностраничный сайт отличается повышенной конверсией, меньшей информативностью по сравнению с другими сайтами</p>
                         </div>
                     </div>
-
-
-                    <div class="imgBlock">
-                        <img id="imgLineMain" src="/img/EllipseOne.png" alt="Line">
-                    </div>
-
-                    <div class="algF">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 artO">
-                                <h3>
-                                    Информационный сайт
-                                </h3>
-                                <p>сайт с повышенной информативностью, подходит для описания вашего проекта
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12 artO">
-                                <h3>
-                                    Интернет магазин
-                                </h3>
-                                <p>любимые всеми магазины, похожи на сайты каталоги, однако есть функция покупки
-                                </p>
-                            </div>
+                </div>
+                <div class="row justify-content-end">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="headerWrapperR">
+                            <h3>Сайт каталог</h3>
+                            <p>- идеальный тип сайта для отображения товаров или услуг методом каталога</p>
                         </div>
                     </div>
-
-
-                </article>
-
-
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="headerWrapperLS">
+                            <h3>Интернет магазин <img id="iconHL" src="/img/icon.png" alt="icon"></h3>
+                            <p>- любимые всеми магазины, похожи на сайты каталоги, однако есть функция покупки</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-end">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="headerWrapperRI">
+                            <h3>Информационный сайт</h3>
+                            <p>- сайт с повышенной информативностью, подходит для описания вашего проекта</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
-            <div class="blInF">
-                <a  href="#">
-                <div class="Serv">
+                <div class="servButton">
                     <a id="noBorder" href="#"><h2>Наши услуги</h2></a>
                 </div>
-                </a>
-            </div>
-
-
         </section>
-
-
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col-lg-12 col-md-12 LineP">#}
+{#                        <h2>Типажи сайтов которые мы делаем</h2>#}
+{#                        <p><small>А какой сайт нужен вам?</small></p>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <article class="infBlock">#}
+{#                    <div class="algN">#}
+{#                        <div class="row">#}
+{#                            <div class="col-lg-12 col-md-12 artO">#}
+{#                                <h3>#}
+{#                                    Лендинг страница#}
+{#                                </h3>#}
+{#                                <p>одностраничный сайт отличается повышенной конверсией, меньшей информативностью по сравнению с другими сайтами.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="row">#}
+{#                            <div class="col-lg-12 col-md-12 artO">#}
+{#                                <h3>#}
+{#                                    Сайт каталог#}
+{#                                </h3>#}
+{#                                <p>идеальный тип сайта для отображения товаров или услуг методом каталога#}
+{#                                </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="imgBlock">#}
+{#                        <img id="imgLineMain" src="/img/EllipseOne.png" alt="Line">#}
+{#                    </div>#}
+{#                    <div class="algF">#}
+{#                        <div class="row">#}
+{#                            <div class="col-lg-12 col-md-12 artO">#}
+{#                                <h3>#}
+{#                                    Информационный сайт#}
+{#                                </h3>#}
+{#                                <p>сайт с повышенной информативностью, подходит для описания вашего проекта#}
+{#                                </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="row">#}
+{#                            <div class="col-lg-12 col-md-12 artO">#}
+{#                                <h3>#}
+{#                                    Интернет магазин#}
+{#                                </h3>#}
+{#                                <p>любимые всеми магазины, похожи на сайты каталоги, однако есть функция покупки#}
+{#                                </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </article>#}
+{#            </div>#}
+{#            <div class="blInF">#}
+{#                <a  href="#">#}
+{#                <div class="Serv">#}
+{#                    <a id="noBorder" href="#"><h2>Наши услуги</h2></a>#}
+{#                </div>#}
+{#                </a>#}
+{#            </div>#}
         <section class="TwoSec">
 
             <h1>Этапы создания сайта</h1>
