--- a/public/style/style.css
+++ b/public/style/style.css
@@ -193,7 +193,7 @@ body {
     background-color: rgba(255,255,255,0.7);
   }
   .octH p {
-    color: #747474;
+    color: #999999;
     margin-left: 60px;
     text-align: left; }
   .octH p span{
@@ -262,7 +262,7 @@ body {
 
 .OneSec {
   width: 100%;
-  height: 1350px;
+  height: 100%;
   background-color: #363636;
   z-index: 100;
   position: relative;
