--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -14,8 +14,7 @@
             <div class="header">
                 <div>
                     <object type="image/svg+xml" data="/img/newLogoWhiteColor.svg" id="object" class="icon" width="45px" height="auto"></object>
-                    {#<img src="/public/img/newLogoWhiteColor.svg" alt="LogoOcto" width="65px" height="auto">#}
-                    <p>Web-Studio<br><b>OctoWice</b></p>
+                    <p id="webStudio">Web-Studio<br><b>OctoWice</b></p>
                 </div>
                 <input class="nav-burger__checkbox" type="checkbox" id="burger">
                 <label class="nav-burger" for="burger">Меню</label>
