--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,7 +1,4 @@
-<footer>
-
-
-    <div class="container">
+<div id="footer" class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 iconsMes">
                 <a  target="_blank" href="#">
@@ -15,37 +12,16 @@
                 </a>
             </div>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
+        <div class="row Links">
             <div class="col-md-12 col-lg-12 listF">
                 <ul>
-                    <a id="FotL" href="{{ path('home') }}">
-                        <li>&copy;2018 OctoWice</li>
-                    </a>
-                    <a href="{{ path('home') }}">
-                        <li>Главная</li>
-                    </a>
-                    <a href="{{ path('aboutUs') }}">
-                        <li>О Нас</li>
-                    </a>
-                    <a href="{{ path('services') }}">
-                        <li>Услуги</li>
-                    </a>
-                    <a href="{{ path('blog') }}">
-                        <li>Блог</li>
-                    </a>
-                    <a href="#">
-                        <li>Контакты</li>
-                    </a>
-                    <a id="FotR" href="#">
-                        <li>+38(066)010-51-78 <small>octowice@gmail.com</small></li>
-                    </a>
+                    <li><a id="FotLf" href="{{ path('home') }}">&copy;2018 OctoWice</a></li>
+                    <li><a href="{{ path('home') }}">Главная</a></li>
+                    <li><a href="{{ path('services') }}">Услуги</a></li>
+                    <li><a href="{{ path('blog') }}">Блог</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li id="octInf"><a href="#" id="FotRg">+38(066)010-51-78<br><small>octowice@gmail.com</small></a></li>
                 </ul>
             </div>
         </div>
     </div>
-
-
-</footer>
