--- a/public/style/style.css
+++ b/public/style/style.css
@@ -410,10 +410,14 @@ body {
   box-shadow: 1px 1px 10px #979797;
   cursor: pointer; }
 
+#footer{
+  width: 100%;
+  height: 20vh;
+}
 .iconsMes {
   display: flex;
   justify-content: center;
-  margin-top: 200px; }
+   }
   .iconsMes i {
     font-size: 24px;
     padding: 0 10px; }
@@ -426,7 +430,7 @@ body {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  font-size: 13px; }
+  font-size: 13px;}
   .listF ul li {
     padding: 25px 25px; }
   .listF ul a {
@@ -434,12 +438,27 @@ body {
   .listF ul a:hover {
     color: #ed1c24; }
 
+.listF ul li #FotRg{
+  width: 130%;
+  color: #bbbbbb;
+  display: block;
+  position: relative;
+  }
+.listF ul li #FotLf{
+  width: 130%;
+  color: #bbbbbb;
+  display: block;
+  position: relative;
+}
 #FotL {
+  width: 30%;
   padding-right: 85px;
   color: #bbbbbb; }
-
+#octInf{
+  text-align: center;
+}
 #FotR {
-  padding-left: 85px; }
+  padding-left: 75px; }
   #FotR li {
     display: flex;
     flex-direction: column;
