--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -244,19 +244,29 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12 blogTextInf">
-                        <p>Во времена ежесекундной конкуренции в разных нишах, заказать сайт кажется самым логичным решением. Сайт – работает всё время, для вас, повышая вовлеченность в ваш бизнес или создавая спрос на ваши товары / услуги.  У нас можно заказать сайт под любой вид деятельности. Будь-то сайт визитка, лендинг страница, сайт каталог или вовсе интернет магазин мы гарантируем индивидуальный подход к каждому проекту.  Мы делаем анализ конкурентов по внешнему виду, сео-составляющим, анализируя по ходу ошибки и удачные моменты в их работах.</p>
+                        <p class="op-gradient" id="back">Во времена ежесекундной конкуренции в разных нишах, заказать сайт кажется самым логичным решением. Сайт – работает всё время, для вас, повышая вовлеченность в ваш бизнес или создавая спрос на ваши товары / услуги.  У нас можно заказать сайт под любой вид деятельности. Будь-то сайт визитка, лендинг страница, сайт каталог или вовсе интернет магазин мы гарантируем индивидуальный подход к каждому проекту.  Мы делаем анализ конкурентов по внешнему виду, сео-составляющим, анализируя по ходу ошибки и удачные моменты в их работах.</p>
                         <br>
 
-                        <p><b>Что мы предлагаем?</b> Недорогие сайты по рынку и за свое качество, мы предоставляем пакеты 3 уровней, дешёвый сайт – это сайт по созданным шаблонам заранее, в каждом шаблоне вы можете изменить определенный перечень свойств.
+                        <p class="willHide"><b>Что мы предлагаем?</b> Недорогие сайты по рынку и за свое качество, мы предоставляем пакеты 3 уровней, дешёвый сайт – это сайт по созданным шаблонам заранее, в каждом шаблоне вы можете изменить определенный перечень свойств.
                             Собственный недорогой сайт – это сбалансированная по цене и качеству услуга, анализ рынка, индивидуальный дизайн, возможность заказать сео-тексты и дополнения из списка.
                             Профессиональный пакет – сайт, построенный на анализе конкурентов, отлажен до идеала. В пакет входит полугодовая техническая поддержка, сео оптимизация и добавление ссылочной массы, контроль показателей сайта и составление отчётов на протяжении 3 месяцев. А также гарантия на наши услуги в течении полугода.
                             Заказывая сайт в нашей студии, вы получаете работающие решения, необходимые именно вашему бизнесу. Мы относимся к вам как к партнёрам, из-за чего у нас интерес в развитии вашего проекта в разы больше чем у простых студий. Ещё по одной причине у нас сильный интерес в развитии вашего проекта – чем успешнее ваш проект будет - лучше реклама будет наших услуг.
                         </p>
-                        <p><b>Почему стоит обратится к нам?</b>
+                        <p class="willHide"><b>Почему стоит обратится к нам?</b>
                             Заказывая дешевый сайт у людей, которые только начинают развитие в сфере веб индустрии вы ставите под вопрос успешность вашего проекта. Из-за незнания мелочей и банальной неопытности вы рискуете потерять рейтинг в поисковике. Увеличение сложности продвижение, больше затрат на рекламу – вот что вас ждёт. Заказав сайт у профессионалов, вы сразу же отделяете себя от этих проблем.  Вовремя работы над проектом вы получаете еженедельный отчёт по выполненной работе, то есть вам остается только проверить.
                             Недорогие сайты по всей Украине вы можете заказать в веб-студии OctoWice, наше сотрудничество не будет безуспешным, мы сможем повысить вовлеченность аудитории, повысить конверсию и в конце концов сделать сайт отличающимся отменным дизайном, продуманной структурой и отличной работой.
                             Свяжитесь с нами!
                         </p>
+                        <button class="readmore" onclick="showP();">Читать дальше</button>
+                        <script>
+                            function showP(){
+                              let list =  document.getElementsByClassName('willHide');
+                                for (let i = 0; i < list.length; i++) {
+                                   list[i].style.display = 'block';
+                                }
+                              document.getElementById('back').removeAttribute('class');
+                            }
+                        </script>
                     </div>
                 </div>
 
@@ -299,8 +309,5 @@
                 'contacts'
             )) }}
     </section>
-
-
-
 </main>
 {% endblock %}
