--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -941,7 +941,7 @@
 
     .BuCen p {
         color: black;
-        font-weight: 700;
+        font-weight: 100;
         /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
@@ -1724,6 +1724,35 @@
 
     @media only screen and (max-width: 375px) {
 
+        /*.op-gradient{
+            overflow: hidden;
+            position: relative;
+            width: 100%;
+            mix-blend-mode: hard-light;
+        }
+
+        .op-gradient::after{
+            position: absolute;
+            content: "";
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            background: linear-gradient(transparent, gray);
+        } */
+
+        .op-gradient{
+            -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
+            from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+        }
+
+        .readmore{
+            display: block;
+        }
+
+        .willHide{
+            display: none;
+        }
 
         body p {
             z-index: 199 !important;
