--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -1330,7 +1330,7 @@
     }
 
     #octoImg{
-        height: 91.5%;
+        height: 82.4%;
         top: 20.5%;
         left: 0;
         position: absolute;
@@ -2381,6 +2381,10 @@
     }
     @media only screen and (max-width: 320px) {
 
+        .readmore {
+            width: 240px;
+        }
+
         body p {
             z-index: 199 !important;
         }
@@ -2416,7 +2420,7 @@
         }
 
         #octoImg {
-            height: 100%;
+            height: 96%;
             top: 12%;
             left: 0;
             position: absolute;
