--- a/public/style/style.css
+++ b/public/style/style.css
@@ -336,7 +336,7 @@ body {
 
 .hInImg {
   text-align: center;
-  margin-top: 300px;
+  margin-top: 15%;
   color: white; }
   .hInImg p {
     color: #979797;
