--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -59,9 +59,9 @@
     .buttonInInfBlock {
         margin-top: 0;
     }
-    .ThereSec {
-        padding-bottom: 410px !important;
-    }
+    /*.ThereSec {*/
+    /*    padding-bottom: 410px !important;*/
+    /*}*/
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1920px)  {
@@ -625,16 +625,18 @@
     }
 
     .ThereSec {
+        -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+        clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
         height: auto;
         background-color: #171717 !important;
         background-image: none;
         /*margin-top: 150px;*/
-        padding-bottom: 15px;
+        /*padding-bottom: 15px;*/
     }
 
-    .hInImg {
-        margin-top: 50px;
-    }
+    /*.hInImg {*/
+    /*    margin-top: 50px;*/
+    /*}*/
 
     .blogTextInf {
         margin-top: 0;
@@ -1092,13 +1094,13 @@
         background-color: #171717 !important;
         background-image: none;
         /*margin-top: 150px;*/
-        padding-bottom: 25px;
+        /*padding-bottom: 25px;*/
 
     }
 
-    .hInImg {
-        margin-top: 50px;
-    }
+    /*.hInImg {*/
+    /*    margin-top: 50px;*/
+    /*}*/
 
     .blogTextInf {
         margin-top: 0;
@@ -1330,8 +1332,8 @@
     }
 
     #octoImg{
-        height: 82.4%;
-        top: 20.5%;
+        height: 82.5%;
+        top: 27%;
         left: 0;
         position: absolute;
         z-index: -1;
@@ -1572,16 +1574,18 @@
     }
 
     .ThereSec {
+        -webkit-clip-path:polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+        clip-path:polygon(0 3%, 100% 0, 100% 97%, 0 100%);
         height: auto;
         background-color: #171717 !important;
         background-image: none;
         /*margin-top: 150px;*/
-        padding-bottom: 0;
+        /*padding-bottom: 0;*/
     }
 
-    .hInImg {
-        margin-top: 50px;
-    }
+    /*.hInImg {*/
+    /*    margin-top: 50px;*/
+    /*}*/
 
     .blogTextInf {
         padding-bottom: 25px;
@@ -1824,8 +1828,8 @@
 }
 @media only screen and (max-width: 411px) {
     #octoImg {
-        height: 90.7%;
-        top: 20.5%;
+        height: 81.9%;
+        top: 27.5%;
         left: 0;
         position: absolute;
         z-index: -1;
@@ -1874,7 +1878,7 @@
         }
 
         #octoImg {
-            height: 74.5%;
+            height: 74.7%;
             top: 34%;
             left: 0;
             position: absolute;
@@ -2127,12 +2131,12 @@
             background-color: #171717 !important;
             background-image: none;
             /*margin-top: 300px;*/
-            padding-bottom: 0;
+            /*padding-bottom: 0;*/
         }
 
-        .hInImg {
-            margin-top: 50px;
-        }
+        /*.hInImg {*/
+        /*    margin-top: 50px;*/
+        /*}*/
 
         .blogTextInf {
             margin-top: 0;
@@ -2420,7 +2424,7 @@
         }
 
         #octoImg {
-            height: 96%;
+            height: 100%;
             top: 12%;
             left: 0;
             position: absolute;
@@ -2653,12 +2657,12 @@
             background-color: #171717 !important;
             background-image: none;
             /*margin-top: 300px;*/
-            padding-bottom: 0;
+            /*padding-bottom: 0;*/
         }
 
-        .hInImg {
-            margin-top: 50px;
-        }
+        /*.hInImg {*/
+        /*    margin-top: 50px;*/
+        /*}*/
 
         .blogTextInf {
             margin-top: 0;
