--- a/templates/components/contactForm.html.twig
+++ b/templates/components/contactForm.html.twig
@@ -15,7 +15,7 @@
                     'size':'70px'}}) }}
                 {{ form_row(form.telNumber,{'id':'telNumb','attr':{'placeholder':'Ваш номер телефона',
                     'size':'70px'}}) }}
-                {{ form_row(form.information,{'id':'spaL','attr':{'placeholder':'Подробнее о вашей компании, адрес вашего сайта',
+                {{ form_row(form.information,{'id':'spaL','attr':{'placeholder':'Ваше сообщение',
                     'size':'70px'}}) }}
                 {{ form_row(form.save,{'attr':{'class':'butnInFTwo'}}) }}
 
